RESOLVED FIXED60760
MediaElements fails to load the data in some cases.
https://bugs.webkit.org/show_bug.cgi?id=60760
Summary MediaElements fails to load the data in some cases.
Alexis Menard (darktears)
Reported 2011-05-13 06:07:26 PDT
When going to http://slides.html5rocks.com/#video-audio with the GTK port or Qt port using MediaPlayerGStreamer the video fails to load in some cases (basically depending on some timing regarding how the rendertree is constructed).
Attachments
Patch (1.98 KB, patch)
2011-05-13 06:11 PDT, Alexis Menard (darktears)
no flags
Patch (5.08 KB, patch)
2011-05-18 12:34 PDT, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-05-13 06:11:38 PDT
Alexis Menard (darktears)
Comment 2 2011-05-13 06:12:28 PDT
(In reply to comment #1) > Created an attachment (id=93440) [details] > Patch Looking for feedback for this patch :D. Should I also remove the similar call in RenderVideo, I believe it's not needed after that patch.
Alexis Menard (darktears)
Comment 3 2011-05-13 06:18:08 PDT
Comment on attachment 93440 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=93440&action=review > Source/WebCore/ChangeLog:14 > + network context). At least the bug can be reproduce with Qt and GTK. reproduced :D. Will fix.
Simon Hausmann
Comment 4 2011-05-13 07:46:12 PDT
You can find an alternative solution that only touches the gstreamer back-end at https://gitorious.org/+qtwebkit-webkit2-dev/webkit/qtwebkit-webkit2-dev/commit/7ae683e548a09cbec9f0e97e89a5e482f1fa9b74
Alexis Menard (darktears)
Comment 5 2011-05-13 08:27:15 PDT
(In reply to comment #4) > You can find an alternative solution that only touches the gstreamer back-end at > https://gitorious.org/+qtwebkit-webkit2-dev/webkit/qtwebkit-webkit2-dev/commit/7ae683e548a09cbec9f0e97e89a5e482f1fa9b74 Yep, I thought about that too but I felt the problem could happen to anyone in fact.
Philippe Normand
Comment 6 2011-05-13 10:56:42 PDT
Comment on attachment 93440 [details] Patch I think this patch makes sense indeed, would it be possible to have a layout test for it?
Simon Hausmann
Comment 7 2011-05-16 00:24:54 PDT
(In reply to comment #5) > (In reply to comment #4) > > You can find an alternative solution that only touches the gstreamer back-end at > > https://gitorious.org/+qtwebkit-webkit2-dev/webkit/qtwebkit-webkit2-dev/commit/7ae683e548a09cbec9f0e97e89a5e482f1fa9b74 > > Yep, I thought about that too but I felt the problem could happen to anyone in fact. I agree that this can happen to others, too, but I think it's wrong of the others to use FrameView. IMHO it's cleaner to use the MediaPlayer* APIs in the MediaPlayer back-end implementation than WebCore::FrameView.
Alexis Menard (darktears)
Comment 8 2011-05-17 07:53:16 PDT
*** Bug 60465 has been marked as a duplicate of this bug. ***
Alexis Menard (darktears)
Comment 9 2011-05-18 12:34:23 PDT
WebKit Commit Bot
Comment 10 2011-05-18 14:26:18 PDT
Comment on attachment 93967 [details] Patch Clearing flags on attachment: 93967 Committed r86790: <http://trac.webkit.org/changeset/86790>
WebKit Commit Bot
Comment 11 2011-05-18 14:26:22 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 12 2011-05-19 13:44:30 PDT
Revision r86790 cherry-picked into qtwebkit-2.2 with commit e309ebe <http://gitorious.org/webkit/qtwebkit/commit/e309ebe>
Note You need to log in before you can comment on or make changes to this bug.